@@ -1,30 +1,0 @@
-##NAME: HARMONIthruput.txt
-##DATE: 22-01-14
-##TYPE: HARMONI throughput curve
-##AUTHOR: Simon Zieleniewski
-##VERSION: 1.0
-##EXTRA: flat value of 0.35
-#Wavelength [um], Throughput
-0.4000,0.35
-0.5000,0.35
-0.6000,0.35
-0.7000,0.35
-0.8000,0.35
-0.9000,0.35
-1.0000,0.35
-1.1000,0.35
-1.2000,0.35
-1.3000,0.35
-1.4000,0.35
-1.5000,0.35
-1.6000,0.35
-1.7000,0.35
-1.8000,0.35
-1.9000,0.35
-2.0000,0.35
-2.1000,0.35
-2.2000,0.35
-2.3000,0.35
-2.4000,0.35
-2.5000,0.35
-2.5500,0.35
