@@ -27,18 +27,15 @@ config_data = {
 
     'read_noise_nir_lowexp':12.0,   #e/pix
 
-    'trans_w_grat':0.45,     #Default=0.45, HARMONI transmission when using grating curve
     'trans_wo_grat':0.35,     #Default=0.35, HARMONI transmission without grating curve
 
     'ADR': 'ON',                     #ADR effect ON or OFF
 
-    #HARMONI phase A gratings (lambda_min, lambda_max, R)
-    'gratings': {'V':(.47,.63, 7500.),'R':(.63,.79, 7500.), 'Iz':(.82,1.03, 7500.),
-             'J':(1.08,1.36, 7500.), 'H':(1.46,1.83, 7500.), 'K':(1.95,2.45, 7500.),
-             'V+R':(.47,.81, 3500.), 'Iz+J':(.8,1.36, 3500.), 'H+K':(1.45,2.45, 3500.),
-             'V-high':(.53,.59, 20000.), 'R-high':(.61,.68, 20000.),
-             'z':(.82,.91, 20000.), 'J-high':(1.17,1.29, 20000.),
-             'H-high':(1.545,1.715, 20000.), 'K-high':(2.09,2.32, 20000.),
+    #HARMONI PDR gratings (lambda_min, lambda_max, R)
+    'gratings': {'V+R':(.47,.81, 3500.), 'Iz+J':(.83,1.37, 3500.), 'H+K':(1.43,2.45, 3500.),
+	    'Iz':(.85,1.00, 7500.),'J':(1.03,1.37, 7500.), 'H':(1.43,1.82, 7500.), 'K':(1.93,2.45, 7500.),
+             'z':(.825,.900, 17000.), 'J-high':(1.175,1.325, 17000.),
+             'H-high':(1.525,1.675, 17000.), 'K-high':(2.075,2.275, 17000.),
              'None':None},
 
     'field_of_view': (152, 214),    #(x, y) field of view in spaxels
